--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,7 +11,7 @@
 
 <ion-content>
     <ion-card class="welcome-card">
-<!--      <img src="/assets/quran.png" alt="" />-->
+      <img src="/assets/quran.png" alt="" />
       <ion-card-header>
         <ion-card-subtitle>Get Started</ion-card-subtitle>
         <ion-card-title>Welcome to Ionic</ion-card-title>
