read data from remote API

--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -16,7 +16,7 @@
   <ion-list>
     <ion-item *ngFor="let item of chepters">
       <ion-icon slot="start"></ion-icon>
-      <p (click)="changeUrl(item)">{{item.id}} - {{item.name}}</p>
+      <p (click)="changeUrl(item)">{{item.student_id}} - {{item.name}} - {{item.email}}</p>
     </ion-item>
   </ion-list>
 </ion-content>
