--- a/src/app/detail/detail.page.html
+++ b/src/app/detail/detail.page.html
@@ -11,11 +11,11 @@
   <ion-card class="welcome-card">
     <img src="/assets/quran-majeed.jpg" alt="" />
     <ion-card-header>
-      <ion-card-subtitle>{{singleChepter?.id}}</ion-card-subtitle>
+      <ion-card-subtitle>{{singleChepter?.student_id}}</ion-card-subtitle>
       <ion-card-title>Welcome to {{singleChepter?.name}}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+      <p>{{singleChepter?.email}} Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
     </ion-card-content>
   </ion-card>
   <ion-list lines="none">
