--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -1,14 +1,16 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="list"></ion-back-button>
+      <ion-back-button></ion-back-button>
+      <!-- <ion-menu-button></ion-menu-button> -->
     </ion-buttons>
-    <ion-title>add Surah</ion-title>
+    <ion-title>sign up</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-grid class="ion-padding-top">
+    <ion-text> Please fill up the information</ion-text>
     <div [formGroup]="signupForm">
       <ion-item>
         <ion-label position="floating">Name</ion-label>
@@ -21,9 +23,19 @@
       </ion-item>
       <ion-item>
 
-        <ion-label position="floating">student id</ion-label>
-        <ion-textarea formControlName="student_id"></ion-textarea>
+        <ion-label position="floating">Address</ion-label>
+        <ion-textarea formControlName="address"></ion-textarea>
       </ion-item>
+
+      <ion-item>
+        <ion-label>Gender</ion-label>
+        <ion-select formControlName="gender" placeholder="Select One">
+          <ion-select-option value="f">Female</ion-select-option>
+          <ion-select-option value="m">Male</ion-select-option>
+        </ion-select>
+      </ion-item>
+
+
 
       <ion-grid class="ion-padding-top">
         <ion-row class="ion-justify-content-center">
