--- a/src/app/detail/detail.page.html
+++ b/src/app/detail/detail.page.html
@@ -4,6 +4,9 @@
       <ion-back-button defaultHref="list"></ion-back-button>
     </ion-buttons>
     <ion-title>detail</ion-title>
+    <ion-button slot="end" (click)="deleteStudent()">
+      <ion-icon name="remove"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
@@ -11,32 +14,18 @@
   <ion-card class="welcome-card">
     <img src="/assets/quran-majeed.jpg" alt="" />
     <ion-card-header>
-      <ion-card-subtitle>{{singleChepter?.student_id}}</ion-card-subtitle>
-      <ion-card-title>Welcome to {{singleChepter?.name}}</ion-card-title>
+      <ion-card-subtitle>{{singleStudent?.student_id}}</ion-card-subtitle>
+      <ion-card-title>Welcome to: {{singleStudent?.name}}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <p>{{singleChepter?.email}} Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+      <p>{{singleStudent?.email}} and database id is {{singleStudent?._id}} Now that your app has been created, you'll want to start building out features and
+        components. Check out some of the resources below for next steps.</p>
     </ion-card-content>
   </ion-card>
-  <ion-list lines="none">
-    <ion-list-header>
-      <ion-label>Resources</ion-label>
-    </ion-list-header>
-    <ion-item href="https://ionicframework.com/docs/">
-      <ion-icon slot="start" color="medium" name="book"></ion-icon>
-      <ion-label>Ionic Documentation</ion-label>
-    </ion-item>
-    <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-      <ion-icon slot="start" color="medium" name="build"></ion-icon>
-      <ion-label>Scaffold Out Your App</ion-label>
-    </ion-item>
-    <ion-item href="https://ionicframework.com/docs/layout/structure">
-      <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-      <ion-label>Change Your App Layout</ion-label>
-    </ion-item>
-    <ion-item href="https://ionicframework.com/docs/theming/basics">
-      <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-      <ion-label>Theme Your App</ion-label>
+  <ion-list>
+    <ion-item *ngFor="let item of studentList">
+      <ion-icon slot="start"></ion-icon>
+      <p>{{item.student_id}} - {{item.name}} - {{item.email}}</p>
     </ion-item>
   </ion-list>
 </ion-content>
