--- a/src/app/detail/detail.page.html
+++ b/src/app/detail/detail.page.html
@@ -4,8 +4,11 @@
       <ion-back-button defaultHref="list"></ion-back-button>
     </ion-buttons>
     <ion-title>detail</ion-title>
+    <ion-button slot="end" (click)="updateItem()">
+      <ion-icon name="trash"></ion-icon>
+    </ion-button>
     <ion-button slot="end" (click)="deleteStudent()">
-      <ion-icon name="remove"></ion-icon>
+      <ion-icon name="trash"></ion-icon>
     </ion-button>
   </ion-toolbar>
 </ion-header>
