--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -13,10 +13,13 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item *ngFor="let item of result">
+  <ion-list no-lines>
+    <ion-item *ngFor="let item of result" detail-push>
       <ion-icon slot="start"></ion-icon>
-      <p (click)="showSingleItem(item)">{{item.student_id}} - {{item.name}} - {{item.email}}</p>
+      <p (click)="showSingleItem(item)">{{item.student_id}} - {{item.name}}</p>
+      <ion-buttons slot="end">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
     </ion-item>
   </ion-list>
 </ion-content>
