--- a/src/app/detail/detail.page.html
+++ b/src/app/detail/detail.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>detail</ion-title>
     <ion-button slot="end" (click)="updateItem()">
-      <ion-icon name="trash"></ion-icon>
+     update
     </ion-button>
     <ion-button slot="end" (click)="deleteStudent()">
       <ion-icon name="trash"></ion-icon>
