--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -15,11 +15,9 @@
 <ion-content>
   <ion-list no-lines>
     <ion-item *ngFor="let item of result" detail-push>
-      <ion-icon slot="start"></ion-icon>
+      <ion-icon slot="start" name="person"></ion-icon>
       <p (click)="showSingleItem(item)">{{item.student_id}} - {{item.name}}</p>
-      <ion-buttons slot="end">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
+      <ion-icon (click)="moreCommands()" name="more" slot="end"></ion-icon>
     </ion-item>
   </ion-list>
 </ion-content>
