--- a/src/app/update/update.page.html
+++ b/src/app/update/update.page.html
@@ -24,13 +24,13 @@
       <ion-item>
 
         <ion-label position="floating">id</ion-label>
-        <ion-textarea formControlName="student_id"></ion-textarea>
+        <ion-textarea formControlName="student_id" ></ion-textarea>
       </ion-item>
 
       <ion-grid class="ion-padding-top">
         <ion-row class="ion-justify-content-center">
 
-          <ion-button (click)="updateData()" shape="round" [disabled]="!signupForm.valid">Save</ion-button>
+          <ion-button (click)="updateData()" shape="square" [disabled]="!signupForm.valid">Save</ion-button>
         </ion-row>
       </ion-grid>
     </div>
